[gd_scene load_steps=4 format=3 uid="uid://uxb6yfeqqdoh"]

[ext_resource type="Script" uid="uid://ckjhyk6gvnjt4" path="res://Scenes/WorldMap/Plot/Buildings/PumpStation/pump.gd" id="1_schoc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jwfqc"]
transparency = 4
albedo_color = Color(0.824214, 0.458009, 0.43083, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_schoc"]
size = Vector3(0.4, 0.2, 0.6)

[node name="Pump" type="Node3D"]
script = ExtResource("1_schoc")

[node name="Construction" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="Construction" type="CSGBox3D" parent="Construction"]
transform = Transform3D(0.999989, 0, 0, 0, 1, 0, 0, 0, 0.999989, 0, 2.45, 0)
size = Vector3(3.2, 4.8, 3.7)

[node name="PumpActivityLabel" type="Label3D" parent="Construction/Construction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.90002)
text = "OFF"

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Construction"]
transform = Transform3D(-4.37109e-08, 0.999989, -5.96032e-08, -1, -4.37114e-08, -5.96039e-08, -5.96032e-08, 5.96032e-08, 0.999989, 2.5, 3.15, 0)
radius = 0.3
sides = 25

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="Construction"]
transform = Transform3D(-4.37107e-08, 0.999987, -5.96037e-08, -1, -4.37114e-08, -5.96039e-08, -5.96031e-08, 5.96037e-08, 0.999987, -3.59998, 4.25, 1.30001)
radius = 0.3
height = 4.0
sides = 25

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Construction"]
transform = Transform3D(-0.999987, -8.74218e-08, -1.19207e-07, 8.74228e-08, -1, 3.55271e-15, -1.19207e-07, -1.65804e-15, 0.999987, 3.5, 1, 0)
radius = 0.3
height = 4.1
sides = 25

[node name="CSGSphere3D" type="CSGSphere3D" parent="Construction"]
transform = Transform3D(0.999989, 0, 0, 0, 1, 0, 0, 0, 0.999989, 3.5, 3.15, 0)
radius = 0.3
radial_segments = 13
rings = 10

[node name="CSGBox3D" type="CSGBox3D" parent="Construction"]
transform = Transform3D(0.999979, 0, -1.77634e-12, 0, 1, 0, 1.77634e-12, 0, 0.999979, -2.1, 0.55, 0)
size = Vector3(1, 1, 3.7)

[node name="CSGBox3D2" type="CSGBox3D" parent="Construction"]
transform = Transform3D(0.999983, 0, -1.13686e-12, 0, 1, 0, 1.13686e-12, 0, 0.999983, -1.89999, 2.45, -1.19208e-07)
size = Vector3(0.75, 0.1, 0.15)

[node name="CSGBox3D3" type="CSGBox3D" parent="Construction"]
transform = Transform3D(0.999939, 0, -4.94532e-12, 0, 1, 0, 4.94532e-12, 0, 0.999939, -2.09997, 0.0504999, -3.57627e-07)
size = Vector3(8, 0.001, 9.9)

[node name="Buttons" type="Node3D" parent="."]

[node name="BuildButton" type="CSGBox3D" parent="Buttons"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0.049, -3.25)
size = Vector3(1.8, 0.1, 2.5)
material = SubResource("StandardMaterial3D_jwfqc")

[node name="Label3D" type="Label3D" parent="Buttons/BuildButton"]
transform = Transform3D(8.74228e-08, 1, 4.37114e-08, 1.31134e-07, -4.37114e-08, 1, 1, -8.74228e-08, -1.31134e-07, 0, 0.1, 0)
text = "Build Simple Pump

100 Euro"

[node name="BuildButtonCollision" type="Area3D" parent="Buttons/BuildButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.45058e-09, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/BuildButton/BuildButtonCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0499997, 0.25, -0.0500002)
shape = SubResource("BoxShape3D_schoc")

[node name="OnButton" type="CSGBox3D" parent="Buttons"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, -0.5, 1.349, 1.85)
size = Vector3(0.4, 0.1, 0.5)
material = SubResource("StandardMaterial3D_jwfqc")

[node name="Label3D" type="Label3D" parent="Buttons/OnButton"]
transform = Transform3D(8.74228e-08, 1, 4.37114e-08, 1.31134e-07, -4.37114e-08, 1, 1, -8.74228e-08, -1.31134e-07, 0, 0.1, 0)
text = "ON"

[node name="OnButtonCollision" type="Area3D" parent="Buttons/OnButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.45058e-09, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/OnButton/OnButtonCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.57628e-07, 2.38419e-07, -2.98023e-07)
shape = SubResource("BoxShape3D_schoc")

[node name="OffButton" type="CSGBox3D" parent="Buttons"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0.7, 1.349, 1.85)
size = Vector3(0.4, 0.1, 0.5)
material = SubResource("StandardMaterial3D_jwfqc")

[node name="Label3D" type="Label3D" parent="Buttons/OffButton"]
transform = Transform3D(8.74228e-08, 1, 4.37114e-08, 1.31134e-07, -4.37114e-08, 1, 1, -8.74228e-08, -1.31134e-07, 0, 0.1, 0)
text = "OFF"

[node name="OffButtonCollision" type="Area3D" parent="Buttons/OffButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.45058e-09, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Buttons/OffButton/OffButtonCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.57628e-07, 2.38419e-07, -2.98023e-07)
shape = SubResource("BoxShape3D_schoc")

[node name="Timers" type="Node" parent="."]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="PumpTimer" type="Timer" parent="Timers"]

[connection signal="body_entered" from="Buttons/BuildButton/BuildButtonCollision" to="." method="_on_build_button_collision_body_entered"]
[connection signal="input_event" from="Buttons/OnButton/OnButtonCollision" to="." method="_on_on_button_collision_input_event"]
[connection signal="input_event" from="Buttons/OffButton/OffButtonCollision" to="." method="_on_off_button_collision_input_event"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="Timers/PumpTimer" to="." method="_on_pump_timer_timeout"]
